# ups-unfucked

./: .coverage  .editorconfig  .gitignore  CONTEXT.md  LICENSE  README.md  RESEARCH-BATTERY-METRICS.md  RESEARCH-FINDINGS-SUMMARY.md  RESEARCH-QUICK-REFERENCE.md  config.toml  justfile  pyproject.toml  pytest.ini
.planning/: INTEGRATION-CHECK-REPORT.md  MILESTONES.md  PHASE4-PLANNING-SUMMARY.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
config/: dummy-ups.conf
docs/: CONTEXT-HISTORICAL.md  EXPERT-PANEL-REVIEW-2026-03-14.md  GLOSSARY.md  USER-SCENARIOS.md
scripts/: battery-health.py  install.sh  test_instcmd_live.sh
src/: __init__.py  alerter.py  capacity_estimator.py  discharge_collector.py  discharge_handler.py  ema_filter.py  ema_ring_buffer.py  event_classifier.py  model.py  monitor.py  monitor_config.py  nut_client.py  replacement_predictor.py  runtime_calculator.py  sag_tracker.py  scheduler_manager.py  soc_predictor.py  soh_calculator.py  virtual_ups.py  virtual_ups_exporter.py
systemd/: nut-driver-virtual.conf  ups-battery-monitor.service  ups-virtual-driver.service
tests/: auc_soh_kernel.py  conftest.py  test_alerter.py  test_capacity_estimator.py  test_config.py  test_cycle_roi.py  test_discharge_collector.py  test_discharge_event_logging.py  test_discharge_handler.py  test_dispatch.py  test_ema.py  test_event_classifier.py  test_health_endpoint_v16.py  test_integration_math.py  test_journald_sulfation_events.py  test_logging.py  test_model.py  test_monitor.py  test_monitor_integration.py  (+16 more)
(+340 files in other folders)
